exe파일 만드는 모듈 추가